--- a/index.qmd
+++ b/index.qmd
@@ -53,3 +53,8 @@ Quarto offers the reworked R Markdown functionalities (cross references, article
 Christophe Dervieux is an open-Source sofware engineer at [Posit, PBC](https://posit.co/) working on projects in the R Markdown and Quarto ecosystems.
 
 {{< include _license.qmd >}}
+
+## Acknowlegments 
+
+Thanks to Andrew Bray and Mine Cetinkaya-Rundel for their work on Materials for the ["From R Markdown to Quarto" ASA Traveling workshop](https://github.com/asa-quarto/website).
+This tutorial inspires from it, and borrows with adaptations some parts.
