Make it first header

--- a/index.qmd
+++ b/index.qmd
@@ -54,7 +54,7 @@ Christophe Dervieux is an open-Source sofware engineer at [Posit, PBC](https://p
 
 {{< include _license.qmd >}}
 
-## Acknowlegments 
+# Acknowlegments 
 
 Thanks to Andrew Bray and Mine Cetinkaya-Rundel for their work on Materials for the ["From R Markdown to Quarto" ASA Traveling workshop](https://github.com/asa-quarto/website).
 This tutorial inspires from it, and borrows with adaptations some parts.
