--- a/3-projects/index.qmd
+++ b/3-projects/index.qmd
@@ -17,8 +17,11 @@ date: ""
 
 If you find this helpful, you can start from the `.qmd` example report completed in previous exercises.
 
--   <a href="https://raw.githubusercontent.com/cderv/tuto-quarto-user-2024/main/examples-correction/new-penguins-full-example-corrected">{{< fa download >}} `new-penguins-full-example-corrected.qmd`</i></a> to be renamed in your project for the exercise of this part.
+-   <a href="https://raw.githubusercontent.com/cderv/user2024-tutorial-quarto/main/examples-correction/new-penguins-full-example-corrected.qmd">{{< fa download >}} `new-penguins-full-example-corrected.qmd`</i></a> to be renamed in your project for the exercise of this part.
+  
+(_For the above, do right click > save link under..._ )
+
 
 ## Correction of examples
 
--   <a href="https://raw.githubusercontent.com/cderv/tuto-quarto-user-2024/main/examples-correction/quarto-101-website.zip">{{< fa download >}} `quarto-101-website.zip`</i></a> : example of a website created using the project from the previous exercises.
+-   <a href="https://raw.githubusercontent.com/cderv/user2024-tutorial-quarto/main/examples-correction/quarto-101-website.zip">{{< fa download >}} `quarto-101-website.zip`</i></a> : example of a website created using the project from the previous exercises.
